...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A9A9A9"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A9A9A9"
        android:gravity="center"
        android:text="Add a Tag"
        android:textColor="#ffffff"
...
